# lib

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  mktest.bat  mktest.sh
src/lib/nativecord/: client.cpp  client.h  config.h  endpoints.h  gateway.h  http.cpp  http.h  net.cpp  net.h
src/lib/nativecord/classes/: activity.h  cache.h  events.h  message.h  user.h  websocket_connection.cpp  websocket_connection.h
src/lib/nativecord/discord/: defs.h  endpoints.h
src/lib/nativecord/discord/enums/: gateway_codes.h  intents.h
src/lib/nativecord/discord/objects/: channel.cpp  channel.h  embed.cpp  embed.h  guild.cpp  guild.h  message.cpp  message.h  objects.h  user.h
src/lib/nativecord/discord/objects/serializers/: channel_s.cpp  channel_s.h  embed_s.cpp  guild_s.cpp  guild_s.h  message_s.cpp  user_s.cpp
src/lib/nativecord/internal/: clientbase.cpp  clientbase.h  objectbase.h
src/lib/nativecord/internal/serializers/: channel.cpp  embed.cpp  embed.h  guild.cpp  message.cpp  message.h  user.cpp  user.h
src/lib/nativecord/objects/: activity.h  attachment.h  channel.h  embed.h  guild.h  message.h  misc.h  role.h  user.h
src/lib/nativecord/util/: assert.cpp  assert.h  cache.h  events.h  http.cpp  http.h  jsonutils.h  macros.h  websocket_connection.cpp  websocket_connection.h
src/test/: commandmanager.cpp  commandmanager.h  main.cpp
src/test/commands/: general.h
src/test/util/: log.cpp  log.h
